# as-camera-input-sdl

./: CMakeLists.txt  README.md  as-camera-input-sdl-config.cmake.in
include/as-camera-input-sdl/: as-camera-input-sdl.h  as-camera-input-sdl.hpp
src/: as-camera-input-sdl.cpp
